github pages edits

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kituico.github.io/k2-portfolio",
+  "homepage": "http://kituico.github.io/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
